@@ -1,6 +1,14 @@
 # ChangeLog for www-apps/moodle
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/moodle/ChangeLog,v 1.15 2011/12/07 13:50:13 blueness Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-apps/moodle/ChangeLog,v 1.16 2012/01/08 17:47:30 blueness Exp $
+
+*moodle-2.1.4 (08 Jan 2012)
+*moodle-2.0.7 (08 Jan 2012)
+*moodle-1.9.16 (08 Jan 2012)
+
+  08 Jan 2012; Anthony G. Basile <blueness@gentoo.org> +moodle-1.9.16.ebuild,
+  +moodle-2.0.7.ebuild, +moodle-2.1.4.ebuild:
+  Version bumps
 
   07 Dec 2011; Anthony G. Basile <blueness@gentoo.org> -moodle-1.9.14.ebuild,
   -moodle-2.0.5.ebuild, -moodle-2.1.2.ebuild:
